# turing-machine-sim

./: .gitignore  CMakeLists.txt  README.md
example/: main.cpp
include/tm/: tm.h
